--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -11,16 +11,12 @@
 
   <!-- include source files here... -->
   <!--
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
+  <script type="text/javascript" src="../lib/jQuery/jquery-1.11.1.js"></script>
   -->
-  
+
   <script type="text/javascript" src="../src/backwards.js"></script>
 
   <!-- include spec files here... -->
-  <!--
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  -->
   <script type="text/javascript" src="backwards.spec.js"></script>
 
   <script type="text/javascript">
