--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Jasmine Spec Runner</title>
-  <meta charset="utf-8" />
+  <!-- <meta charset="utf-8" /> -->
 
   <link rel="stylesheet" type="text/css" href="../lib/jasmine/jasmine.css">
   <script type="text/javascript" src="../lib/jasmine/jasmine.js"></script>
@@ -13,11 +13,18 @@
   <!--
   <script type="text/javascript" src="../lib/jQuery/jquery-1.11.1.js"></script>
   -->
+  <!--
+  <script type="text/javascript" src="../src/Player.js"></script>
+  <script type="text/javascript" src="../src/Song.js"></script>
 
+  <script type="text/javascript" src="SpecHelper.js"></script>
+  <script type="text/javascript" src="PlayerSpec.js"></script>
+  -->
   <script type="text/javascript" src="../src/backwards.js"></script>
+  <script type="text/javascript" src="backwardsSpec.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="backwards.spec.js"></script>
+  <!-- // <script type="text/javascript" src="backwards.spec.js"></script> -->
 
   <script type="text/javascript">
     (function() {
@@ -31,9 +38,19 @@
         return htmlReporter.specFilter(spec);
       };
 
-      window.onload = function() {
-        jasmineEnv.execute();
+      var currentWindowOnload = window.onload;
+
+      window.onload = function () {
+        if (currentWindowOnload) {
+          currentWindowOnload();
+        }
+        execJasmine();
+        // jasmineEnv.execute();
       };
+
+      function execJasmine () {
+        setTimeout(jasmineEnv.execute(), 3000);
+      }
     })();
   </script>
 </head>
