--- a/spec/SpecRunnerDos.html
+++ b/spec/SpecRunnerDos.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Jasmine Spec Runner</title>
-  <meta charset="utf-8" />
+  <!-- <meta charset="utf-8" /> -->
 
-  <link rel="stylesheet" type="text/css" href="/../lib/jasmine/jasmine.css">
-  <script type="text/javascript" src="/../lib/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="/../lib/jasmine/jasmine-html.js"></script>
-  <script type="text/javascript" src="/../lib/jasmine-jsreporter/jasmine-jsreporter.js"></script>
+  <link rel="stylesheet" type="text/css" href="../lib/jasmine/jasmine.css">
+  <script type="text/javascript" src="../lib/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="../lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="../lib/jasmine-jsreporter/jasmine-jsreporter.js"></script>
 
   <!-- include source files here... -->
   <!--
@@ -17,6 +17,12 @@
   <script type="text/javascript" src="../src/backwards.js"></script>
 
   <!-- include spec files here... -->
+  <!-- // <script type="text/javascript" src="backwards.spec.js"></script> -->
+  <script type="text/javascript" src="../src/Player.js"></script>
+  <script type="text/javascript" src="../src/Song.js"></script>
+
+  <script type="text/javascript" src="SpecHelper.js"></script>
+  <script type="text/javascript" src="PlayerSpec.js"></script>
   <script type="text/javascript" src="backwards.spec.js"></script>
 
   <script type="text/javascript">
@@ -31,9 +37,19 @@
         return htmlReporter.specFilter(spec);
       };
 
+      var currentWindowOnload = window.onload;
+
       window.onload = function () {
-        jasmineEnv.execute();
+        if (currentWindowOnload) {
+          currentWindowOnload();
+        }
+        execJasmine();
+        // jasmineEnv.execute();
       };
+
+      function execJasmine () {
+        setTimeout(jasmineEnv.execute(), 3000);
+      }
     })();
   </script>
 </head>
