--- a/spec/backwards.isArray.spec.html
+++ b/spec/backwards.isArray.spec.html
@@ -9,22 +9,8 @@
   <script type="text/javascript" src="../lib/jasmine/jasmine-html.js"></script>
   <script type="text/javascript" src="../lib/jasmine-jsreporter/jasmine-jsreporter.js"></script>
 
-  <!-- include source files here... -->
-  <!--
-  <script type="text/javascript" src="../lib/jQuery/jquery-1.11.1.js"></script>
-  -->
-  <!--
-  <script type="text/javascript" src="../src/Player.js"></script>
-  <script type="text/javascript" src="../src/Song.js"></script>
-
-  <script type="text/javascript" src="SpecHelper.js"></script>
-  <script type="text/javascript" src="PlayerSpec.js"></script>
-  -->
   <script type="text/javascript" src="../src/backwards.js"></script>
-  <script type="text/javascript" src="backwardsSpec.js"></script>
-
-  <!-- include spec files here... -->
-  <!-- // <script type="text/javascript" src="backwards.spec.js"></script> -->
+  <script type="text/javascript" src="backwards.isArray.spec.js"></script>
 
   <script type="text/javascript">
     (function() {
@@ -41,16 +27,8 @@
       var currentWindowOnload = window.onload;
 
       window.onload = function () {
-        // if (currentWindowOnload) {
-        //   currentWindowOnload();
-        // }
-        // execJasmine();
         jasmineEnv.execute();
       };
-
-      // function execJasmine () {
-      //   setTimeout(jasmineEnv.execute(), 3000);
-      // }
     })();
   </script>
 </head>
